modified MotionProfile2D to work as linked list